--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -41,7 +41,8 @@
             </div>
           <% end %>
 
-        </div>
+        </div><br/>
+        <%= paginate @dealzons %>
       </div>
 
 
