before adding dealbay

--- a/app/views/dealzons/_form.html.erb
+++ b/app/views/dealzons/_form.html.erb
@@ -8,6 +8,7 @@
    <%= f.input :am_category %>
    <%= f.input :am_review %>
    <%= f.input :am_code %>
+   <%= f.input :am_date %>
    <%= f.input :am_price_is %>
    <%= f.input :am_price_was %>
    <%= f.input :am_price_sale %>
