--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -24,8 +24,7 @@
     width: calc(100% - 1.6rem);
   }
 }
-
-
+/* ~~~~~~~~~~~~~~~~~~ Quick Nave ~~~~~~~~~~~~~~~~~~ */
 .dealzon_nav {
   width: 100%;
   background-color:#65A8A6;
@@ -54,7 +53,7 @@
   display:none;
   color:#fff;
 }
-
+/* ~~~~~~~~~~~~~~~~~~ Quick Nave ~~~~~~~~~~~~~~~~~~ */
 
 @media screen and (max-width:500px) {
   .dealzon_nav .menu-trigger {
@@ -82,4 +81,8 @@
 .show_bold {
  font-size: 1.1em;
  font-weight: bold;
+}
+.promo_code ul li:nth-child(2) {
+  font-size: 0.8em;
+  color: gray;
 }
