--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -18,37 +18,87 @@
 .dealzon_card:hover {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05), 0 5px 15px rgba(0, 0, 0, 0.05);
 }
+.index_category {
+  height: 1.5em;
+}
+.category_blue {
+  background: #08f;
+  width: 52%;
+}
+.category_red {
+  background: red;
+  width: 56%;
+}
+.category_green {
+  background: green;
+  width: 26%;
+}
+.category_purple {
+  background: purple;
+  width: 37%;
+}
+.category_brown {
+  background: brown;
+  width: 48%;
+}
+.category_sale {
+  font-size: .65em;
+  letter-spacing: .1ch;
+  /* padding-top: 1em; */
+  font-weight: bold;
+  color: #999;
+  text-transform: uppercase;
+}
+.sale_index {
+  color: #08f;
+  font-weight: bold;
+}
 @media screen and (max-width: 800px) {
   .dealzon_card {
     display: flex;
     width: calc(100% - 1.6rem);
   }
 }
+@media screen and (max-width:500px) {
+   .category_blue {
+    width: 43.5%;
+  }
+  .category_red {
+    width: 59%;
+  }
+  .category_green {
+    width: 22%;
+  }
+  .category_purple {  
+    width: 37%;
+  }
+  .category_brown {
+    width: 41%;
+ }
+}
 /* ~~~~~~~~~~~~~~~~~~ Quick Nave ~~~~~~~~~~~~~~~~~~ */
 .dealzon_nav {
   width: 100%;
-  background-color:#65A8A6;
+  background-color:#3b3b3b;
 }
 .dealzon_nav ul {
   padding: 0em;
+  margin-bottom: 1em;
 }
 .dealzon_nav ul li {
   display:inline-block;  
   padding: 0em;
 }
-
 .dealzon_nav a {
   color:#fff;
   display:block;
   text-decoration: none;
   padding:10px 15px;
  }
-
 .dealzon_nav a:hover {
   background: #E65540;
   color: #fff;
 }
-
 .dealzon_nav .menu-trigger {
   display:none;
   color:#fff;
@@ -81,8 +131,21 @@
 .show_bold {
  font-size: 1.1em;
  font-weight: bold;
+ color: #08f;
 }
 .promo_code ul li:nth-child(2) {
   font-size: 0.8em;
   color: gray;
+}
+.code_step {
+  border: 1px solid;
+  padding: 0.8em;
+}
+.code_step ol li:nth-child(3) {
+  margin-bottom: -2em;
+}
+
+
+.ckeditor img {
+  width: 100%;
 }
