--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -5,170 +5,89 @@
 <!-- Wrapper -->
 <div class="wrapper">
 
-  <!-- Main -->
-    <section class="main">
+<!-- Main -->
+  <section class="main">
 
-      <div class="dealzon_nav">
-        <a href="#" class="menu-trigger">Category</a>
-        <ul>
-          <li><%= link_to "All", dealzons_path %></li>
-          <% Acategory.all.each do |acategory| %>
-            <li><%= link_to acategory.name, dealzons_path(acategory: acategory.name) %></li>
-          <% end %>
-        </ul>
-      </div>
+    <div class="dealzon_nav">
+      <a href="#" class="menu-trigger">Category</a>
+      <ul>
+        <li><%= link_to "All", dealzons_path %></li>
+        <% Acategory.all.each do |acategory| %>
+          <li><%= link_to acategory.name, dealzons_path(acategory: acategory.name) %></li>
+        <% end %>
+        <% if can? :update, @dealzon %>
+         <li><%= link_to "Add New Inspiration", new_dealzon_path %></li>
+        <% end %>
+      </ul>
+    </div>
 
-      <div class="index_container">
-        <p><%= link_to "Add New Inspiration", new_dealzon_path %></p>
-        <div class="grid">
+    <div class="index_container">
+      <div class="grid">
 
-          <% @dealzons.each do |deal| %>
-            <div class="dealzon_card">
-              <div class="card--image">
-                <%= link_to (image_tag deal.am_image), deal %>
-              </div>
-              <div class="card--content">
-                <div class="card--category"><%= deal.acategory.name %></div>
-                <p><%= deal.am_title %></p>
-                <ul>
-                  <li>$<%= deal.am_price_is %></li>
-                  <li>$<%= deal.am_price_was %></li>
-                </ul>
-                <div class="index_button">
-                <a class="button primary fit" href="dealzons/<%= deal.id %>">See More Detail</a>
-                </div>  
-              </div> 
+        <% @dealzons.each do |deal| %>
+          <div class="dealzon_card">
+            <div class="card--image">
+              <%= link_to (image_tag deal.am_image), deal %>
             </div>
-          <% end %>
+            <div class="card--content">
 
-        </div><br/>
-        <%= paginate @dealzons %>
-      </div>
+              <div class="index_category">
+                <% if deal.acategory_id == 1 %> 
+                 <div class="card--category category_red"><%= deal.acategory.name %></div>
+                <% end %>
+                <% if deal.acategory_id == 2 %> 
+                 <div class="card--category category_green"><%= deal.acategory.name %></div>
+                <% end %>
+                <% if deal.acategory_id == 3 %> 
+                 <div class="card--category category_purple"><%= deal.acategory.name %></div>
+                <% end %>
+                <% if deal.acategory_id == 4 %> 
+                 <div class="card--category category_blue"><%= deal.acategory.name %></div>
+                 <div class="category_sale"> you can save <span class="sale_index"><%= deal.am_price_sale %>%off</span> more</div>
+                <% end %>
+                <% if deal.acategory_id == 5 %> 
+                 <div class="card--category category_brown"><%= deal.acategory.name %></div>
+                <% end %>
+              </div>
+
+              <p><%= deal.am_title %></p>
+              <ul>
+                <li>$<%= deal.am_price_is %></li>
+                <% if deal.acategory_id == 4 %> 
+
+                <% else %>
+                 <li>$<%= deal.am_price_was %></li>
+                <% end %>
+              </ul>
+              <div class="index_button">
+              <a class="button primary fit" href="dealzons/<%= deal.id %>">See More Detail</a>
+              </div>  
+
+              <% if can? :update, deal %>
+              <div class="admin">
+                <%= link_to "Edit", edit_dealzon_path(deal) %>
+                <%= link_to "Delete", dealzon_path(deal), method: :delete, data: {confirm: "Are you sure?"}%>
+              </div>
+            <% end %>
+            </div> 
+          </div>
+        <% end %>
+
+      </div><br/>
+      <%= paginate @dealzons %>
+    </div>
 
 
-    </section>
+  </section>
 
   <!-- Sidebar -->
-    <aside class="sidebar">
-
-      <!-- Blurb -->
-        <section>
-          <h2>Magna etiam</h2>
-          <p>Fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem sed euismod placerat. Vivamus porttitor et magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper lorem ipsum.</p>
-          <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
-          </ul>
-        </section>
-
-      <!-- Featured posts -->
-        <section class="featured-posts">
-          <h2>Sed aliquam</h2>
-          <article>
-            <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-            <header>
-              <span class="date">September 19, 2016</span>
-              <h3><a href="#">Non velit accumsan cursus gravida amet sapien</a></h3>
-            </header>
-            <p>Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis varius.</p>
-            <ul class="actions">
-              <li><a href="#" class="button">Continue Reading</a></li>
-            </ul>
-          </article>
-        </section>
-
-      <!-- Posts -->
-        <section>
-          <h2>Arcu dolore</h2>
-          <ul class="posts">
-            <li>
-              <a href="#">Etiam quis viverra lorem in semper lorem.</a>
-              <span class="date">September 15, 2016</span>
-            </li>
-            <li>
-              <a href="#">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</a>
-              <span class="date">September 15, 2016</span>
-            </li>
-            <li>
-              <a href="#">Arcu vivamus quis venenatis orci lorem.</a>
-              <span class="date">September 15, 2016</span>
-            </li>
-            <li>
-              <a href="#">Veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore magna.</a>
-              <span class="date">September 15, 2016</span>
-            </li>
-            <li>
-              <a href="#">Mauris neque quam, fermentum ut nisl vitae</a>
-              <span class="date">September 15, 2016</span>
-            </li>
-            <li>
-              <a href="#">Convallis maximus nisl sed mattis nunc id lorem euismod amet placerat.</a>
-              <span class="date">September 15, 2016</span>
-            </li>
-            <li>
-              <a href="#">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</a>
-              <span class="date">September 15, 2016</span>
-            </li>
-          </ul>
-          <ul class="actions">
-            <li><a href="#" class="button">More Posts</a></li>
-          </ul>
-        </section>
-
-    </aside>
+  <%= render "shared/sidebar" %>
 
 </div>
 
 <!-- Footer -->
-<footer id="footer">
-  <div class="inner">
-    <section class="info">
-      <h3>About Us</h3>
-      <div class="about">
-        <p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur malesuada.</p><p>Sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis.</p>
-        <ul class="actions">
-          <li><a href="#" class="button">Learn More</a></li>
-        </ul>
-      </div>
-      <div class="team">
-        <article>
-          <span class="image"><img src="images/pic06.jpg" alt=""></span>
-          <p>
-            <strong class="name">John Doe</strong>
-            <span class="title">Lorem semper magna etiam</span>
-          </p>
-        </article>
-        <article>
-          <span class="image"><img src="images/pic07.jpg" alt=""></span>
-          <p>
-            <strong class="name">Jane Anderson</strong>
-            <span class="title">Etiam feugiat adipiscing veroeros</span>
-          </p>
-        </article>
-        <article>
-          <span class="image"><img src="images/pic08.jpg" alt=""></span>
-          <p>
-            <strong class="name">Mike Smith</strong>
-            <span class="title">Consequat nulla dolor blandit</span>
-          </p>
-        </article>
-      </div>
-    </section>
-    <section class="contact">
-      <h3>Contact Us</h3>
-      <ul class="contact-icons">
-        <li class="icon fa-home"><a href="#">1234 Somewhere Road #80486<br>Nashville, TN 00000</a></li>
-        <li class="icon fa-phone"><a href="#">(800) 555-0000 x12345</a></li>
-        <li class="icon fa-envelope"><a href="#">hello@untitled.tld</a></li>
-        <li class="icon fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-        <li class="icon fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-      </ul>
-    </section>
-  </div>
-  <div class="copyright">
-    &copy; Untitled. All rights reserved.
-  </div>
-</footer>
-
+<%= render "shared/footer" %>
+<!-- Javascript -->
 <%= render "dealzon.js" %>
 
 
