--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -54,6 +54,10 @@
 .admin {
   float: right;
 }
+.admin_index {
+  text-align: center;
+  font-size: 0.8em;
+}
 .check_boutton {
   margin-top: 0.5em;
 }
