--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -83,9 +83,8 @@
   letter-spacing: .1ch;
   /* padding-top: 1em; */
   font-weight: bold;
-  color: #fff;
+  /* color: #fff; */
   text-transform: uppercase;
-  padding-left: 0.5em;
 }
 .index_button {
   text-align: center;
@@ -165,6 +164,7 @@ list-style: none;
  @media screen and (max-width: 480px) {
    .index_container {
      padding: 0 1rem 1rem;
+     margin-top: 2em;
    }
    .card--image img {
      object-fit: contain;
