--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* ---------------------------------------------
+   Index Page
+ --------------------------------------------- */
+
+
+
+ /* ---------------------------------------------
+   Show Page
+ --------------------------------------------- */
+ .featured_deal {
+   font-size: 1.3em;
+ }
+ .featured_index {
+   text-align: center;
+ }
