--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -133,6 +133,9 @@ list-style: none;
   width: 20%;
   margin-right: 15px;
 }
+.srtpl-l img {
+  width: 100%;
+}
 .srtpl-a {
   display: block;
   outline: 0!important;
