--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -67,8 +67,7 @@
 .show_right .contents p {
   margin: 0em;
 }
-.amazon_related {
-  margin-top: 70%;
+.amazon_related {  
   padding: 0.5em;
 }
 /* ---------------------------------------------
@@ -77,6 +76,7 @@
  .form_section {
    width: 70%;
    margin: 0 auto;
+   margin-top: 3em;
  }
  .form_button {
    margin-top: 2em;
