--- a/app/views/dealzons/_form.html.erb
+++ b/app/views/dealzons/_form.html.erb
@@ -1,15 +1,16 @@
 <%= simple_form_for @dealzon do |f| %>
  <div class="form_section">
    <%= f.collection_select :acategory_id, Acategory.all, :id, :name, {prompt: "Choose a category"} %>
+   <%= f.select :am_expire, options_for_select([["Ongoing", ""], "End"]) %><br/>
    <%= f.input :am_title %>
-   <%= f.input :am_intro %>
+   <%= f.input :am_category, label: "For related products on amazon"%>   
    <%= f.input :am_spare_21, as: :text, input_html: { class: 'ckeditor' }, label: "Description" %>
    <%= f.input :am_image %>
-   <%= f.input :am_category %>
    <%= f.input :am_review %>
    <%= f.input :am_code %>
    <%= f.input :am_date %>
    <%= f.input :am_price_is %>
+   <%= f.select :am_shipping, options_for_select([["Shipping isn't free", ""], "Shipping is free"]) %><br/>
    <%= f.input :am_price_was %>
    <%= f.input :am_price_sale %>
    <%= f.input :am_link %>
