--- a/app/views/dealzons/show.html.erb
+++ b/app/views/dealzons/show.html.erb
@@ -9,7 +9,6 @@
     <section>
       <p class="notice">Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla lorem.</p>
     
-  
       <div class="show_detail_wrap">
         <div class="show_left">
           <img src="<%= @dealzon.am_image %>">
@@ -19,33 +18,59 @@
           <h3><%= @dealzon.am_title %></h3>
           <ul>
             <li class="show_price_is">$<%= @dealzon.am_price_is %></li>
+            <% if @dealzon.am_shipping.present? %>
+             <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
+             <li>+ free shipping</li>
+            <% end %>
           </ul>
           <hr>
-           <% if @dealzon.am_code.present? %>
-            <div class="promo_code">
-              <ul>
-                <li><p>PROMO CODE : <%= @dealzon.am_code %></p></li> |
-                <li><p>Expiration Date: <%= @dealzon.am_date %></p></li>
-              </ul>
-            </div>
-           <% end %>
+           <% if @dealzon.am_expire.present? %>
+             <div class="somthing_hidden"><%= @dealzon.am_expire %></div>
+             <% if @dealzon.acategory_id == 4 %>
+              <div class="promo_code">
+                <p class="end_code">PROMO CODE : <%= @dealzon.am_code %></p>
+                <p class="end_date">This code has expired.</p>                
+              </div>
+             <% end %>
+             <% if @dealzon.acategory_id == 5 %>
+              <div class="promo_code">
+               <p class="end_date">This promotion has expired.</p>
+              </div>
+             <% end %>
+            <% else %>
+             <% if @dealzon.acategory_id == 4  %>
+               <div class="promo_code">
+                <p class="code_number">PROMO CODE : <%= @dealzon.am_code %></p>
+                <p class="code_date">Expiration Date: <%= @dealzon.am_date %></p>
+               </div>
+              <% end %>
+              <% if @dealzon.acategory_id == 5  %>
+               <div class="promo_code">
+                <p class="code_date">Expiration Date: <%= @dealzon.am_date %></p>
+               </div>
+              <% end %>
+            <% end %>
+
           <hr>
 
           <div class="contents">
             <% if @dealzon.am_code.present? %> 
-              <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %></span> at Amazon. If you use this promo code, you could save <span class="show_bold"><%= @dealzon.am_price_sale %>% off</span> more.</p>
-              <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)</p><br/>
+             <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %></span> at Amazon. If you use this promo code, you could save <span class="show_bold"><%= @dealzon.am_price_sale %>% off</span> more.</p>
+             <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)</p><br/>
             <% else %>
-              <!-- for deals -->
-              <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %>(<%= @dealzon.am_price_sale %>% Off)</span> at Amazon.</p>
+             <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %>(<%= @dealzon.am_price_sale %>% Off)</span> at Amazon.</p>
+             
+             <% if @dealzon.am_shipping.present? %>
+              <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
               <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)</p><br/>
+             <% end %>
             <% end %>
           
             <div class="ckeditor">
              <%= raw @dealzon.am_spare_21 %><br/>
             </div>
             
-            <% if @dealzon.am_code.present? %> 
+            <% if @dealzon.acategory_id == 4 %>
               <div class="code_step">
                 <p>How To Use:</p>
                 <ol>
@@ -70,6 +95,7 @@
           <% end %>
 
           <hr>
+
           <% if @dealzon.acategory_id == 4 %> 
             <div class="check_boutton">
               <a target="_blank" href="<%= @dealzon.am_link %>" class="button primary fit">Copy code & Open site</a>
@@ -82,27 +108,18 @@
         </div><!--/.show-right-->
       </div><!--/.show_detail_wrap-->
       
+
+      <div class="test">
+        <% @dealzon_show.each do |deal| %>
+         <% if deal.acategory_id == @dealzon.acategory_id %> 
+         <h3><%= link_to deal.am_title, deal %></h3>
+         <% end %>
+        <% end %>
+      </div>
+
     </section>
 
 
-    <div class="amazon_related">
-      <script type="text/javascript">
-        amzn_assoc_placement = "adunit0";
-        amzn_assoc_tracking_id = "3628-20";
-        amzn_assoc_ad_mode = "search";
-        amzn_assoc_ad_type = "smart";
-        amzn_assoc_marketplace = "amazon";
-        amzn_assoc_region = "US";
-        amzn_assoc_default_search_phrase = "<%= @dealzon.am_title %>";
-        amzn_assoc_default_category = "All";
-        amzn_assoc_linkid = "8e4056cd7c49b6d726c657f30e19d527";
-        amzn_assoc_search_bar = "true";
-        amzn_assoc_search_bar_position = "top";
-        amzn_assoc_title = "Shop Related Products";
-      </script>
-      <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
-    </div><br>
-     
   </section>
 
   <!-- Sidebar -->
