--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -117,13 +117,11 @@
   color: gray;
 }
 .promo_code p {
- font-size: 1.3em;
  margin: 0em;
 }
 .show_bold {
  font-size: 1.1em;
  font-weight: bold;
- color: #08f;
 }
 .promo_code ul li:nth-child(2) {
   font-size: 0.8em;
@@ -136,8 +134,22 @@
 .code_step ol li:nth-child(3) {
   margin-bottom: -2em;
 }
-
-
-.ckeditor img {
-  width: 100%;
+.code_number {
+  font-size: 1.2em;
 }
+.code_date {
+  font-size: 0.9em;
+  color: #999;
+}
+.end_code {
+  font-size: 1.2em;
+  color: red;
+  text-decoration: line-through;
+}
+.end_date {
+  color: red;
+  font-size: 0.9em;
+}
+
+
+
