--- a/app/views/dealzons/_sidebar.html.erb
+++ b/app/views/dealzons/_sidebar.html.erb
@@ -1,21 +1,40 @@
 <aside class="sidebar">
 
     <section>
+
+    <div class="amazon_related">
+      <script type="text/javascript">
+        amzn_assoc_placement = "adunit0";
+        amzn_assoc_tracking_id = "3628-20";
+        amzn_assoc_ad_mode = "search";
+        amzn_assoc_ad_type = "smart";
+        amzn_assoc_marketplace = "amazon";
+        amzn_assoc_region = "US";
+        amzn_assoc_default_search_phrase = "<%= @dealzon.am_category %>";
+        amzn_assoc_default_category = "All";
+        amzn_assoc_linkid = "8e4056cd7c49b6d726c657f30e19d527";
+        amzn_assoc_search_bar = "true";
+        amzn_assoc_search_bar_position = "top";
+        amzn_assoc_title = "Shop Related Products";
+      </script>
+      <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+    </div><br>
+     
+    </section>
+
+    <section>
      <h2>Popular Post</h2>
      <div id="sidebar">
-      <ul id="side-rcnt-thumb-post-list">
-        
+      <ul id="side-rcnt-thumb-post-list">      
         <% @dealzon_side.each do |ds| %>
-          <% if ds.acategory_id == 1 %> 
-            <li>
-              <div class="srtpl-l">
-                <%= link_to (image_tag ds.am_image), ds, :class => "srtpl-a" %>        
-              </div>
-              <div class="srtpl-r">
-                <%= link_to ds.am_title, ds, :class => "srtpl-n" %>
-              </div>
-            </li>
-          <% end %>
+          <li>
+            <div class="srtpl-l">
+              <%= link_to (image_tag ds.am_image), ds, :class => "srtpl-a" %>        
+            </div>
+            <div class="srtpl-r">
+              <%= link_to ds.am_title, ds, :class => "srtpl-n" %>
+            </div>
+          </li>
         <% end %>
       </ul>
     </div><br/>
