--- a/app/views/dealzons/new.html.erb
+++ b/app/views/dealzons/new.html.erb
@@ -1,1 +1,8 @@
-<%= render 'form' %>
+<header id="header">
+  <%= render 'posts/navbar' %> 
+</header>
+<div class="wrapper">
+  <section class="main">
+   <%= render 'form' %>
+  </section>
+</div>
