--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,14 +1,17 @@
 <%= simple_form_for @event do |f| %>
   <div class="form_section">
    <%= f.collection_select :ecategory_id, Ecategory.all, :id, :name, {prompt: "Choose a category"} %>
+   <%= f.select :eb_expire, options_for_select([["Ongoing", ""], "End"]) %><br/>
    <%= f.input :eb_title %>
-   <%= f.input :eb_intro %>
-   <%= f.input :eb_spare_21, as: :text, input_html: { class: 'ckeditor' }, label: "Description" %>
+   <%= f.input :eb_featured_sale, label: "Freatured Sale in Index page" %>
+   <%= f.input :eb_intro, label: "Featured Sale in Show page" %>
+   <%= f.input :eb_ckeditor, as: :text, input_html: { class: 'ckeditor' }, label: "Description" %>
    <%= f.input :eb_image %>
    <%= f.input :eb_review %>
    <%= f.input :eb_code %>
    <%= f.input :eb_date %>
    <%= f.input :eb_price_is %>
+   <%= f.select :eb_shipping, options_for_select([["Shipping isn't free", ""], "Shipping is free"]) %><br/>
    <%= f.input :eb_price_was %>
    <%= f.input :eb_price_sale %>
    <%= f.input :eb_link %>
