--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,10 @@
 <header id="header">
-  <%= render 'dealzons/navbar' %> 
+  <%= render 'events/navbar' %> 
 </header>
+
+<div class="index_header">
+ <h1>All about the eBay Shopping</h1>
+</div>
 
 <!-- Wrapper -->
 <div class="wrapper">
@@ -11,35 +15,60 @@
       <div class="dealzon_nav">
         <a href="#" class="menu-trigger">Category</a>
         <ul>
-          <li><%= link_to "All", events_path %></li>
+          <li><%= link_to "All Offer", events_path %></li>
           <% Ecategory.all.each do |ecategory| %>
             <li><%= link_to ecategory.name, events_path(ecategory: ecategory.name) %></li>
+          <% end %>
+          <% if can? :update, @event %>
+           <li><%= link_to "Add New Inspiration", new_event_path %></li>
           <% end %>
         </ul>
       </div>
 
       <div class="index_container">
-        <p><%= link_to "Add New Inspiration", new_event_path %></p>
         <div class="grid">
 
-          <% @events.each do |event| %>
-            <div class="dealzon_card">
-              <div class="card--image">
-                <%= link_to (image_tag event.eb_image), event %>
-              </div>
-              <div class="card--content">
-                <div class="card--category"><%= event.ecategory.name if event.ecategory %></div>
-                <p><%= event.eb_title %></p>
-                <ul>
-                  <li>$<%= event.eb_price_is %></li>
-                  <li>$<%= event.eb_price_was %></li>
-                </ul>
-                <div class="index_button">
-                <a class="button primary fit" href="events/<%= event.id %>">See More Detail</a>
-                </div>  
-              </div> 
+         <% @events.each do |event| %>
+          <div class="dealzon_card">
+            <div class="card--image">
+              <%= link_to (image_tag event.eb_image), event %>
             </div>
-          <% end %>
+            <div class="card--content">
+
+              <div class="index_category">
+              <% if event.ecategory_id == 1 %> 
+               <div class="card--category category_red"><%= event.ecategory.name if event.ecategory %></div>
+              <% end %>
+              <% if event.ecategory_id == 2 %> 
+               <div class="card--category category_green"><%= event.ecategory.name if event.ecategory %></div>
+              <% end %>
+              <% if event.ecategory_id == 3 %> 
+               <div class="card--category category_blue"><%= event.ecategory.name if event.ecategory %></div>
+               <div class="category_sale"> you can save <span class="sale_index"><%= event.eb_price_sale %>%off</span> more</div>
+              <% end %>
+              <% if event.ecategory_id == 4 %> 
+               <div class="card--category category_purple"><%= event.ecategory.name if event.ecategory %></div>
+              <% end %>
+            </div>
+
+             
+              <p><%= event.eb_title %></p>
+              <% if event.ecategory_id == 1 %>
+               <ul class="featured_index">
+                <li><%= event.eb_featured_sale %></li>
+               </ul>
+              <% else %>
+               <ul>
+                <li>$<%= event.eb_price_is %></li>
+                <li>$<%= event.eb_price_was %></li>
+               </ul>
+              <% end %>
+              <div class="index_button">
+               <a class="button primary fit" href="events/<%= event.id %>">See More Detail</a>
+              </div>  
+            </div> 
+          </div>
+         <% end %>
 
         </div><br/>
         <%= paginate @events %>
