--- a/app/views/events/_sidebar_show.html.erb
+++ b/app/views/events/_sidebar_show.html.erb
@@ -21,6 +21,98 @@
       <li><a href="#" class="button">Learn More</a></li>
     </ul>
    </section>
+   
+   <!-- Accordian -->
+   <section>
+     <ul id="accord1" class="accordian">
+      <li>
+        <header>One</header>
+        <section>
+         <div id="sidebar">
+          <ul id="side-rcnt-thumb-post-list">
+            <% @event_side.each do |eventside| %>
+              <% if eventside.ecategory_id == 1 %> 
+                <li>
+                  <div class="srtpl-l">
+                    <%= link_to (image_tag eventside.eb_image), eventside, :class => "srtpl-a" %>        
+                  </div>
+                  <div class="srtpl-r">
+                    <%= link_to eventside.eb_title, eventside, :class => "srtpl-n" %>
+                  </div>
+                </li>
+              <% end %>
+            <% end %>
+          </ul>
+        </div>
+        </section>
+      </li>
+      <li>
+        <header>Two</header>
+        <section>
+         <div id="sidebar">
+          <ul id="side-rcnt-thumb-post-list">
+            <% @event_side.each do |eventside| %>
+              <% if eventside.ecategory_id == 2 %> 
+                <li>
+                  <div class="srtpl-l">
+                    <%= link_to (image_tag eventside.eb_image), eventside, :class => "srtpl-a" %>        
+                  </div>
+                  <div class="srtpl-r">
+                    <%= link_to eventside.eb_title, eventside, :class => "srtpl-n" %>
+                  </div>
+                </li>
+              <% end %>
+            <% end %>
+          </ul>
+        </div>
+        </section>
+      </li>
+      <li>
+        <header>Three</header>
+        <section>
+         <div id="sidebar">
+          <ul id="side-rcnt-thumb-post-list">
+            <% @event_side.each do |eventside| %>
+              <% if eventside.ecategory_id == 3 %> 
+                <li>
+                  <div class="srtpl-l">
+                    <%= link_to (image_tag eventside.eb_image), eventside, :class => "srtpl-a" %>        
+                  </div>
+                  <div class="srtpl-r">
+                    <%= link_to eventside.eb_title, eventside, :class => "srtpl-n" %>
+                  </div>
+                </li>
+              <% end %>
+            <% end %>
+          </ul>
+        </div>
+        </section>
+      </li>
+      <li>
+        <header>Three</header>
+        <section>
+         <div id="sidebar">
+          <ul id="side-rcnt-thumb-post-list">
+            <% @event_side.each do |eventside| %>
+              <% if eventside.ecategory_id == 4 %> 
+                <li>
+                  <div class="srtpl-l">
+                    <%= link_to (image_tag eventside.eb_image), eventside, :class => "srtpl-a" %>        
+                  </div>
+                  <div class="srtpl-r">
+                    <%= link_to eventside.eb_title, eventside, :class => "srtpl-n" %>
+                  </div>
+                </li>
+              <% end %>
+            <% end %>
+          </ul>
+        </div>
+        </section>
+      </li>
+    </ul>
+   </section>
+   <!-- Accordian -->
+
 
    <!-- Blurb -->
     <section>
