--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -91,25 +91,6 @@
           
         </section>
 
-
-        <div class="amazon_related">
-          <script type="text/javascript">
-            amzn_assoc_placement = "adunit0";
-            amzn_assoc_tracking_id = "3628-20";
-            amzn_assoc_ad_mode = "search";
-            amzn_assoc_ad_type = "smart";
-            amzn_assoc_marketplace = "amazon";
-            amzn_assoc_region = "US";
-            amzn_assoc_default_search_phrase = "<%= @post.post_title %>";
-            amzn_assoc_default_category = "All";
-            amzn_assoc_linkid = "8e4056cd7c49b6d726c657f30e19d527";
-            amzn_assoc_search_bar = "true";
-            amzn_assoc_search_bar_position = "top";
-            amzn_assoc_title = "Shop Related Products";
-          </script>
-          <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
-        </div><br>
-       
     </section>
 
   <!-- Sidebar -->
@@ -118,7 +99,7 @@
 </div>
 
 <!-- Footer -->
-<%= render 'posts/footer' %>
+<%= render 'shared/footer' %>
 
 <!-- Javascript -->
 <%= render 'posts/post.js' %>
